// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list of components > a keyed item switching between text and markup, or between tags 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, withKey, checkTagName } = helpers;
  
  let block5 = tag => createBlock(\`<\${tag || 't'}>x</\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].items());
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block2[i1];
      const key1 = ctx['item'].id;
      c_block2[i1] = withKey(safeOutput(ctx['item'].content, key, "__1", 1, key1), key1);
    }
    const b2 = list(c_block2);
    const ctx2 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['this'].items());
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx2);
      ctx["item"] = k_block4[i1];
      const key1 = ctx['item'].id;
      const tag1 = checkTagName(ctx['item'].tag);
      c_block4[i1] = withKey(toggler(tag1, block5(tag1)()), key1);
    }
    const b4 = list(c_block4);
    return multi([b2, b4]);
  }
}"
`;

exports[`list of components > components in a node in a t-foreach  1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["item"]);
  
  let block1 = createBlock(\`<div><ul><block-child-0/></ul></div>\`);
  let block3 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block2[i1];
      const key1 = 'li_'+ctx['item'];
      const skey1 = keyOf(key1);
      const b4 = comp1({item: ctx['item']}, key + \`__1__\${skey1}\`, node, this, null);
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > components in a node in a t-foreach  2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.item, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > crash on duplicate key in dev mode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList([1,2]);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = 'child';
      const skey1 = keyOf(key1);
      if (keys1.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(skey1);
      const props1 = {};
      c_block1[i1] = withKey(comp1(props1, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > crash on duplicate key in dev mode 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`list of components > crash on the same object used twice as a key in dev mode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList([ctx['this'].obj,ctx['this'].obj]);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'];
      const skey1 = keyOf(key1);
      if (keys1.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(skey1);
      const props1 = {};
      c_block1[i1] = withKey(comp1(props1, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > crash on the same object used twice as a key in dev mode 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`list of components > dev mode: a body without components keeps the list's own keys 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey, OwlError } = helpers;
  
  let block2 = createBlock(\`<i block-attribute-0="class"/>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'];
      if (keys1.has(key1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(key1);
      let attr1 = typeof ctx['item'];
      c_block1[i1] = withKey(block2([attr1]), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > dev mode: keys a t-set body output in the loop shares are duplicates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent, prepareList, safeOutput, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  function value1(ctx, node, key = "") {
    const props1 = {};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["v"] = new LazyValue(value1, ctx, this, node, key + \`__2\`);
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].items);
    const keys2 = new Set();
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block2[i1];
      const key1 = ctx['item'];
      const skey1 = keyOf(key1);
      if (keys2.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys2.add(skey1);
      c_block2[i1] = withKey(safeOutput(ctx['v'], key, "__3", 1, key1), key1);
    }
    return list(c_block2);
  }
}"
`;

exports[`list of components > dev mode: keys a t-set body output in the loop shares are duplicates 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<i>child</i>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`list of components > dev mode: keys the list tells apart but the components share are duplicates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'];
      const skey1 = keyOf(key1);
      if (keys1.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(skey1);
      const props1 = {v: ctx['item']};
      c_block1[i1] = withKey(comp1(props1, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > dev mode: keys the list tells apart but the components share are duplicates 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > emptied, keeps a node one of its components put among the items as it unmounts 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Item\`, true, false, false, ["id"]);
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].ids());
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["id"] = k_block2[i1];
      const key1 = ctx['id'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({id: ctx['id']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > emptied, keeps a node one of its components put among the items as it unmounts 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.id, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > list of sub components inside other nodes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`SubComponent\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.blips);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["blip"] = k_block2[i1];
      const key1 = ctx['blip'].id;
      const skey1 = keyOf(key1);
      const b4 = comp1({}, key + \`__1__\${skey1}\`, node, this, null);
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > list of sub components inside other nodes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>asdf</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`list of components > object keys are told apart by identity, components included 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf, OwlError } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.items);
    const keys1 = new Set();
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'];
      const skey1 = keyOf(key1);
      if (keys1.has(skey1)) { throw new OwlError(\`Got duplicate key in t-foreach: \${key1}\`)}
      keys1.add(skey1);
      const props1 = {item: ctx['item']};
      c_block1[i1] = withKey(comp1(props1, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > object keys are told apart by identity, components included 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.item.n, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > order is correct when slots are not of same type 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  
  let block2 = createBlock(\`<div>A</div>\`);
  
  function slot1(ctx, node, key = "") {
    let b2;
    if (!ctx['this'].state.active) {
      b2 = block2();
    }
    return multi([b2]);
  }
  
  function slot2(ctx, node, key = "") {
    return text(\`B\`);
  }
  
  function slot3(ctx, node, key = "") {
    return text(\`C\`);
  }
  
  return function template(ctx, node, key = "") {
    return comp1({slots: markRaw({"a": {__render: slot1, __ctx: ctx, __owner: this, active: !ctx['this'].state.active}, "b": {__render: slot2, __ctx: ctx, __owner: this, active: true}, "c": {__render: slot3, __ctx: ctx, __owner: this, active: ctx['this'].state.active}})}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`list of components > order is correct when slots are not of same type 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, callSlot, withKey, keyOf } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].slotNames);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["slotName"] = k_block1[i1];
      const key1 = ctx['slotName'];
      const skey1 = keyOf(key1);
      const slot1 = (ctx['slotName']);
      c_block1[i1] = withKey(toggler(slot1, callSlot(ctx, node, key + \`__1__\${skey1}\`, slot1, true, null)), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > reconciliation alg works for t-foreach in t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["blip"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.s);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["section"] = k_block2[i1];
      ctx["section_index"] = i1;
      const key1 = ctx['section_index'];
      const skey1 = keyOf(key1);
      const ctx2 = ctx;
      const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['section'].blips);
      for (let i2 = 0; i2 < l_block3; i2++) {
        let ctx = Object.create(ctx2);
        ctx["blip"] = k_block3[i2];
        ctx["blip_index"] = i2;
        const key2 = ctx['blip_index'];
        const skey2 = keyOf(key2);
        c_block3[i2] = withKey(comp1({blip: ctx['blip']}, key + \`__1__\${skey1}__\${skey2}\`, node, this, null), key2);
      }
      c_block2[i1] = withKey(list(c_block3), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > reconciliation alg works for t-foreach in t-foreach 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.blip, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > reconciliation alg works for t-foreach in t-foreach, 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["row","col"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<p><block-child-0/></p>\`);
  let block5 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.rows);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["row"] = k_block2[i1];
      const key1 = ctx['row'];
      const skey1 = keyOf(key1);
      const ctx2 = ctx;
      const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['this'].state.cols);
      for (let i2 = 0; i2 < l_block4; i2++) {
        let ctx = Object.create(ctx2);
        ctx["col"] = k_block4[i2];
        const key2 = ctx['col'];
        const skey2 = keyOf(key2);
        const b6 = comp1({row: ctx['row'],col: ctx['col']}, key + \`__1__\${skey1}__\${skey2}\`, node, this, null);
        c_block4[i2] = withKey(block5([], [b6]), key2);
      }
      const b4 = list(c_block4);
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > reconciliation alg works for t-foreach in t-foreach, 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.row+'_'+ctx['this'].props.col, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > simple list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block1[i1];
      const key1 = ctx['elem'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({value: ctx['elem'].value}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`list of components > simple list 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > sub components rendered in a loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["n"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.numbers);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["number"] = k_block2[i1];
      const key1 = ctx['number'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({n: ctx['number']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > sub components rendered in a loop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.n, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > sub components with some state rendered in a loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.numbers);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["number"] = k_block2[i1];
      const key1 = ctx['number'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > sub components with some state rendered in a loop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.n, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > switch component position 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["key"]);
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].clist);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["c"] = k_block2[i1];
      const key1 = ctx['c'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({key: ctx['c']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > switch component position 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > t-foreach with t-component, and update 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(Array(2));
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["n"] = k_block2[i1];
      ctx["n_index"] = i1;
      const key1 = ctx['n_index'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({val: ctx['n_index']}, key + \`__1__\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components > t-foreach with t-component, and update 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, key, "__1");
    const b3 = safeOutput(ctx['this'].props.val, key, "__2");
    return block1([], [b2, b3]);
  }
}"
`;
